[package]
name = "nats-resgate-mssql-service"
version = "0.1.1"
authors = ["Ramil Gilfanov <info@ramil.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.4.18", default-features=false, features=["chrono"] }
anyhow = "1.0"
futures = "0.3.8"
tokio = { version = "0.3.6", features = [ "full"] }
tokio-util = { version ="0.5.1", features = [ "compat"]}
nats="0.8.6"
serde={ version = "1.0", features = ["derive"] }
serde_json = "1.0"
docopt = "1.1.0"
once_cell = "1.5.2"