[package]
name = "nats-resgate-mssql-service"
version = "0.1.2"
authors = ["Ramil Gilfanov <info@ramil.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.5", default-features = false, features = ["chrono", "sql-browser-tokio"] }
anyhow = "1.0"
futures = "0.3"
# tokio = { version = "1.0.1", features = [ "full"] }
# tokio-util = "0.6.0"
nats = "0.9.7"
serde = "*"
serde_json = "1.0"
docopt = "1.1"
async-std = "1.9.0"
url = "*"
